--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,30 +11,11 @@
 </div>
 <p-button label="Submit"></p-button>
 
-<h2>Here are some links to help you start:</h2>
-<ul>
-  <li>
-    <h2>
-      <a target="_blank" rel="noopener" href="https://angular.io/tutorial"
-        >Tour of Heroes</a
-      >
-    </h2>
-  </li>
-  <li>
-    <h2>
-      <a
-        target="_blank"
-        rel="noopener"
-        href="https://github.com/angular/angular-cli/wiki"
-        >CLI Documentation</a
-      >
-    </h2>
-  </li>
-  <li>
-    <h2>
-      <a target="_blank" rel="noopener" href="https://blog.angular.io/"
-        >Angular blog</a
-      >
-    </h2>
-  </li>
-</ul>
+
+<h2>progressBar</h2>
+<h3>Indeterminate<h3>
+<div class="card">
+    <p-progressBar mode="indeterminate" [style]="{'height': '6px'}"></p-progressBar>
+</div>
+
+<hr>
