--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,6 +32,16 @@
 <div class="card">
     <div class="flex flex-wrap align-items-center justify-content-center card-container blue-container">
         <div class="bg-blue-100 w-12rem m-3 border-round">
+            <p-progressBar mode="indeterminate" [style]="{'height': '36px'}"></p-progressBar>
+        </div>
+    </div>
+</div>
+
+<hr>
+
+<div class="card">
+    <div class="flex flex-wrap align-items-center justify-content-center card-container blue-container">
+        <div class="bg-blue-100 w-12rem m-3 border-round">
             <div class="mt-5 border-round-bottom bg-blue-500 text-white font-bold p-3 flex align-items-center justify-content-center">mt-5</div>
         </div>
         <div class="bg-blue-100 w-12rem m-3 border-round">
