--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,6 +37,16 @@
     </div>
 </div>
 
+<div class="card">
+    <div class="flex flex-wrap align-items-center justify-content-center card-container blue-container">
+        <div class="bg-blue-100 w-12rem m-3 border-round">
+            <p-progressBar [value]="value"></p-progressBar>
+        </div>
+    </div>
+</div>
+
+
+
 <hr>
 
 <div class="card">
