feat(progressbar): service random

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,11 +40,17 @@
 <div class="card">
     <div class="flex flex-wrap align-items-center justify-content-center card-container blue-container">
         <div class="bg-blue-100 w-12rem m-3 border-round">
-            <p-progressBar [value]="value"></p-progressBar>
+            <p-progressBar [value]="value1"></p-progressBar>
         </div>
     </div>
 </div>
-
+<div class="card">
+    <div class="flex flex-wrap align-items-center justify-content-center card-container blue-container">
+        <div class="bg-blue-100 w-12rem m-3 border-round">
+            <p-progressBar [value]="value2"></p-progressBar>
+        </div>
+    </div>
+</div>
 
 
 <hr>
