--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,9 +14,10 @@
 <p-button label="Submit"></p-button>
 
 <hr>
+
+<h1>progressBar</h1>
 <div style="text-align:left" class="m-auto">
-  <h2>progressBar</h2>
-  <h3>Indeterminate</h3>
+  <h2>Indeterminate</h2>
   <div>6px
     <div class="card">
         <p-progressBar mode="indeterminate" [style]="{'height': '6px'}"></p-progressBar>
@@ -37,6 +38,8 @@
     </div>
 </div>
 
+<h2>Vaue dynamic</h2>
+<h3>Service No component</h3>
 <div class="card">
     <div class="flex flex-wrap align-items-center justify-content-center card-container blue-container">
         <div class="bg-blue-100 w-12rem m-3 border-round">
@@ -52,9 +55,12 @@
     </div>
 </div>
 
+<h3>Service and Component</h3>
+<app-progress-bar-demo></app-progress-bar-demo>
 
 <hr>
 
+<h3>NgFlex </h3>
 <div class="card">
     <div class="flex flex-wrap align-items-center justify-content-center card-container blue-container">
         <div class="bg-blue-100 w-12rem m-3 border-round">
