--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,35 +16,30 @@
 <hr>
 
 <h1>progressBar</h1>
-<div style="text-align:left" class="m-auto">
+<div class="m-auto">
   <h2>Indeterminate</h2>
-  <div>6px
-    <div class="card">
-        <p-progressBar mode="indeterminate" [style]="{'height': '6px'}"></p-progressBar>
-    </div>
+  <div class="card">
+      <div class="flex flex-wrap align-items-center justify-content-center card-container blue-container">
+          <div class="bg-blue-100 w-12rem m-3 border-round">
+              <p-progressBar mode="indeterminate" [style]="{'height': '36px'}"></p-progressBar>
+          </div>
+      </div>
   </div>
-  <div>36px
-    <div class="card">
-        <p-progressBar mode="indeterminate" [style]="{'height': '36px'}"></p-progressBar>
-    </div>
-  </div>
-</div>
 
-<div class="card">
-    <div class="flex flex-wrap align-items-center justify-content-center card-container blue-container">
-        <div class="bg-blue-100 w-12rem m-3 border-round">
-            <p-progressBar mode="indeterminate" [style]="{'height': '36px'}"></p-progressBar>
-        </div>
-    </div>
-</div>
+  <h2>Value</h2>
+  <h3>Service and Component</h3>
+  <div class="card">
+      <div class="card-container blue-container overflow-hidden">
+          <div class="flex">
+              <div class="flex-initial flex align-items-center justify-content-center bg-blue-500 font-bold text-white m-2 px-5 py-3 border-round"><app-progress-bar-demo></app-progress-bar-demo></div>
+              <div class="flex-initial flex align-items-center justify-content-center bg-blue-500 font-bold text-white m-2 px-5 py-3 border-round"><app-progress-bar-demo></app-progress-bar-demo></div>
+          </div>
+      </div>
+  </div>    
+  <hr>
 
-<h3>Service and Component</h3>
-<app-progress-bar-demo></app-progress-bar-demo>
-
-<hr>
-
-<h3>NgFlex </h3>
-<div class="card">
+  <h1>NgFlex </h1>
+  <div class="card">
     <div class="flex flex-wrap align-items-center justify-content-center card-container blue-container">
         <div class="bg-blue-100 w-12rem m-3 border-round">
             <div class="mt-5 border-round-bottom bg-blue-500 text-white font-bold p-3 flex align-items-center justify-content-center">mt-5</div>
