--- a/src/app/progress-bar-demo/progress-bar-demo.component.html
+++ b/src/app/progress-bar-demo/progress-bar-demo.component.html
@@ -1,7 +1,9 @@
 <div class="card">
+    Title1
     <div class="flex flex-wrap align-items-center justify-content-center card-container">
+      Title2
         <div class="bg-blue-100 w-12rem m-3 border-round">
-            <p-progressBar [value]="value1"></p-progressBar>
+            Title3 <p-progressBar [value]="value"></p-progressBar>
         </div>
     </div>
 </div>
