--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
 <hr>
 
 <h1>progressBar</h1>
-<div class="m-auto">
+<div >
   <h2>Indeterminate</h2>
   <div class="card">
       <div class="flex flex-wrap align-items-center justify-content-center card-container blue-container">
