use attribute for title of progressBar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,8 +31,8 @@
   <div class="card">
       <div class="card-container blue-container overflow-hidden">
           <div class="flex">
-              <div class="flex-initial flex align-items-center justify-content-center bg-blue-500 font-bold text-white m-2 px-5 py-3 border-round"><app-progress-bar-demo></app-progress-bar-demo></div>
-              <div class="flex-initial flex align-items-center justify-content-center bg-blue-500 font-bold text-white m-2 px-5 py-3 border-round"><app-progress-bar-demo></app-progress-bar-demo></div>
+              <div class="flex-initial flex align-items-center justify-content-center bg-blue-500 font-bold text-white m-2 px-5 py-3 border-round"><app-progress-bar-demo title2="First"></app-progress-bar-demo></div>
+              <div class="flex-initial flex align-items-center justify-content-center bg-blue-500 font-bold text-white m-2 px-5 py-3 border-round"><app-progress-bar-demo title2="Second"></app-progress-bar-demo></div>
           </div>
       </div>
   </div>    
