--- a/src/app/progress-bar-demo/progress-bar-demo.component.html
+++ b/src/app/progress-bar-demo/progress-bar-demo.component.html
@@ -1,9 +1,9 @@
 <div class="card">
-    Title1
+    {{title1}}
     <div class="flex flex-wrap align-items-center justify-content-center card-container">
-      Title2
+      {{title2}}
         <div class="bg-blue-100 w-12rem m-3 border-round">
-            Title3 <p-progressBar [value]="value"></p-progressBar>
+            {{title3}} <p-progressBar [value]="value"></p-progressBar>
         </div>
     </div>
 </div>
