use component for each demo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,48 +10,8 @@
   />
 </div>
 <hr>
-
-<p-button label="Submit"></p-button>
-
+<app-demo-progress-bar></app-demo-progress-bar>
 <hr>
-
-<h1>progressBar</h1>
-<div >
-  <h2>Indeterminate</h2>
-  <div class="card">
-      <div class="flex flex-wrap align-items-center justify-content-center card-container blue-container">
-          <div class="bg-blue-100 w-12rem m-3 border-round">
-              <p-progressBar mode="indeterminate" [style]="{'height': '36px'}"></p-progressBar>
-          </div>
-      </div>
-  </div>
-
-  <h2>Value</h2>
-  <h3>Service and Component</h3>
-  <div class="card">
-      <div class="card-container blue-container overflow-hidden">
-          <div class="flex">
-              <div class="flex-initial flex align-items-center justify-content-center bg-blue-500 font-bold text-white m-2 px-5 py-3 border-round"><app-progress-bar-demo title2="First"></app-progress-bar-demo></div>
-              <div class="flex-initial flex align-items-center justify-content-center bg-blue-500 font-bold text-white m-2 px-5 py-3 border-round"><app-progress-bar-demo title2="Second"></app-progress-bar-demo></div>
-          </div>
-      </div>
-  </div>    
-  <hr>
-
-  <h1>NgFlex </h1>
-  <div class="card">
-    <div class="flex flex-wrap align-items-center justify-content-center card-container blue-container">
-        <div class="bg-blue-100 w-12rem m-3 border-round">
-            <div class="mt-5 border-round-bottom bg-blue-500 text-white font-bold p-3 flex align-items-center justify-content-center">mt-5</div>
-        </div>
-        <div class="bg-blue-100 w-12rem m-3 border-round">
-            <div class="mr-8 border-round-left bg-blue-500 text-white font-bold p-3 flex align-items-center justify-content-center">mr-8</div>
-        </div>
-        <div class="bg-blue-100 w-12rem m-3 border-round">
-            <div class="mb-3 border-round-top bg-blue-500 text-white font-bold p-3 flex align-items-center justify-content-center">mb-3</div>
-        </div>
-        <div class="bg-blue-100 w-12rem m-3 border-round">
-            <div class="ml-6 border-round-right bg-blue-500 text-white font-bold p-3 flex align-items-center justify-content-center">ml-6</div>
-        </div>
-    </div>
-</div>
+<app-demo-ngflex></app-demo-ngflex>
+<hr>
+<app-demo-primeng-button></app-demo-primeng-button>
