refactor: rename component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
   />
 </div>
 <hr>
-<app-demo-progress-bar></app-demo-progress-bar>
+<app-demo-primeng-progress-bar></app-demo-primeng-progress-bar>
 <hr>
 <app-demo-ngflex></app-demo-ngflex>
 <hr>
