multiple random implem

--- a/src/app/demo/primeng-progress-bar/primeng-progress-bar.component.html
+++ b/src/app/demo/primeng-progress-bar/primeng-progress-bar.component.html
@@ -13,8 +13,12 @@
 <div class="card">
     <div class="card-container blue-container overflow-hidden">
         <div class="flex">
-            <div class="flex-initial flex align-items-center justify-content-center bg-blue-500 font-bold text-white m-2 px-5 py-3 border-round"><app-primeng-progress-bar title2="First"></app-primeng-progress-bar></div>
-            <div class="flex-initial flex align-items-center justify-content-center bg-blue-500 font-bold text-white m-2 px-5 py-3 border-round"><app-primeng-progress-bar title2="Second"></app-primeng-progress-bar></div>
+            <div class="flex-initial flex align-items-center justify-content-center bg-blue-500 font-bold text-white m-2 px-5 py-3 border-round">
+              <app-primeng-progress-bar title2="First" serviceType="random10"></app-primeng-progress-bar>
+            </div>
+            <div class="flex-initial flex align-items-center justify-content-center bg-blue-500 font-bold text-white m-2 px-5 py-3 border-round">
+              <app-primeng-progress-bar title2="Second" serviceType="random100"></app-primeng-progress-bar>
+            </div>
         </div>
     </div>
 </div>    
