add info : value increment random here

--- a/src/app/primeng/progress-bar/progress-bar.component.html
+++ b/src/app/primeng/progress-bar/progress-bar.component.html
@@ -5,5 +5,8 @@
         <div class="bg-blue-100 w-12rem m-3 border-round">
             {{title3}} <p-progressBar [value]="value"></p-progressBar>
         </div>
+        <div>
+           {{value}} % &nbsp;&nbsp;&nbsp; {{ info }}
+        </div>
     </div>
 </div>
