--- a/src/app/demo/primeng-progress-bar/primeng-progress-bar.component.html
+++ b/src/app/demo/primeng-progress-bar/primeng-progress-bar.component.html
@@ -19,6 +19,9 @@
             <div class="flex-initial flex align-items-center justify-content-center bg-blue-500 font-bold text-white m-2 px-5 py-3 border-round">
               <app-primeng-progress-bar title2="Second" serviceType="random100"></app-primeng-progress-bar>
             </div>
+            <div class="flex-initial flex align-items-center justify-content-center bg-blue-500 font-bold text-white m-2 px-5 py-3 border-round">
+              <app-primeng-progress-bar title2="Third" serviceType="bigNumber"></app-primeng-progress-bar>
+            </div>
         </div>
     </div>
-</div>    
+</div>
