--- a/src/app/primeng/progress-bar/progress-bar.component.html
+++ b/src/app/primeng/progress-bar/progress-bar.component.html
@@ -6,7 +6,7 @@
             {{title3}} <p-progressBar [value]="value"></p-progressBar>
         </div>
         <div>
-           {{value}} % &nbsp;&nbsp;&nbsp; {{ info }}
+           {{value}} % &nbsp;&nbsp;&nbsp; {{ info }}&nbsp;&nbsp;&nbsp; {{ counter }}
         </div>
     </div>
 </div>
