--- a/src/app/primeng/progress-bar/progress-bar.component.html
+++ b/src/app/primeng/progress-bar/progress-bar.component.html
@@ -3,10 +3,10 @@
     <div class="flex flex-wrap align-items-center justify-content-center card-container">
       {{title2}}
         <div class="bg-blue-100 w-12rem m-3 border-round">
-            {{title3}} <p-progressBar [value]="value"></p-progressBar>
+            {{title3}} <p-progressBar [value]="msg.value"></p-progressBar>
         </div>
         <div>
-           {{value}} % &nbsp;&nbsp;&nbsp; {{ info }}&nbsp;&nbsp;&nbsp; {{ counter }}
+           {{msg.value}} % &nbsp;&nbsp;&nbsp; {{ msg.info }}&nbsp;&nbsp;&nbsp; {{ msg.counter }}
         </div>
     </div>
 </div>
