--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -1,6 +1,21 @@
 <hr>
-<app-demo-primeng-progress-bar></app-demo-primeng-progress-bar>
+<div class="card">
+    <div class="flex flex-wrap align-items-center justify-content-center card-container">
+      <app-demo-primeng-progress-bar></app-demo-primeng-progress-bar>
+    </div>
+</div>
 <hr>
-<app-demo-ngflex></app-demo-ngflex>
+<div class="card">
+    <div class="flex flex-wrap align-items-center justify-content-center card-container">
+      <app-demo-ngflex></app-demo-ngflex>
+    </div>
+</div>
 <hr>
-<app-demo-primeng-button></app-demo-primeng-button>
+<div class="card">
+    <div class="flex flex-wrap align-items-center justify-content-center card-container">
+      <app-demo-primeng-button></app-demo-primeng-button>
+    </div>
+</div>
+
+
+
